Update HRMS system with latest changes and improvements

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,9 +1,10 @@
 # API Configuration
-REACT_APP_API_URL=http://localhost:5000/api
+# Using your Render backend URL
+REACT_APP_API_URL=https://hrms-iwiz.onrender.com/api
 
 # Environment
-REACT_APP_NODE_ENV=development
+REACT_APP_NODE_ENV=production
 
 # Feature Flags
 REACT_APP_ENABLE_ANALYTICS=false
-REACT_APP_ENABLE_DEBUG=true
+REACT_APP_ENABLE_DEBUG=false
