--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
