Fix CORS configuration to allow localhost:3000 for development

--- a/backend/env.example
+++ b/backend/env.example
@@ -12,8 +12,10 @@ JWT_EXPIRE=7d
 NODE_ENV=production
 
 # CORS Configuration
-# Set to your Vercel frontend URL (with protocol)
-CORS_ORIGIN=https://hrms-iwiz-frontend.vercel.app
+# Comma-separated list of allowed origins
+# For development: include http://localhost:3000
+# For production: include your frontend domain
+CORS_ORIGINS=http://localhost:3000,https://hrms-iwiz-frontend.vercel.app
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
